@startuml アプリアーキテクチャ
package "ui" #00ff7f {
  ' UI層

  class MainActivity

  package "vulnoverview" {
    ' ホーム画面
    object VulnOverviewScreen
    class VulnOverviewViewModel {
      -fetchVulnOverviewUseCase: FetchVulnOverviewUseCase
      -favoriteVulnOverviewUseCase: FavoriteVulnOverviewUseCase
    }
    VulnOverviewScreen .down.> VulnOverviewViewModel
  }

  package "search" {
    ' 検索画面
    object SearchScreen
    class SearchViewModel {
      -searchVulnOverviewUseCase: SearchVulnOverviewUseCase
    }
    SearchScreen .down.> SearchViewModel
  }

  package "settings" {
    ' 設定画面
    object SettingScreen
  }

  MainActivity .down.> VulnOverviewScreen
  MainActivity .down.> SearchScreen
  MainActivity .down.> SettingScreen
}

package "domain" #00ffff {
  ' ドメイン層
  class FetchVulnOverviewUseCase {
    -jvnRepository: JvnRepository
  }
  class FavoriteVulnOverviewUseCase {
    -jvnRepository: JvnRepository
  }
  class SearchVulnOverviewUseCase {
    -searchRepository: SearchRepository
  }
}

package "repository" #4682b4 {
  interface JvnRepository
  
  class DefaultJvnRepository {
    -jvnLocalDataSource
    -jvnRemoteDataSource
  }
  
  interface SearchRepository
  
  class DefaultSearchRepository {
    -jvnRemoteDataSource
  }
}

package "data" #4682b4 {
  interface JvnDataSource

  package "local" {
    class JvnLocalDataSource {
      -database: JvnDatabase
    }
  }
  
  package "remote" {
    class JvnRemoteDataSource {
      -myJvnApiService: MyJvnApiService
    }
  }
  
  JvnDataSource <|.down. JvnLocalDataSource
  JvnDataSource <|.down. JvnRemoteDataSource
}

package "network" #4682b4 {
  class MyJvnApiService
  class Retrofit
}

package "database" #4682b4 {
  class JvnDatabase
  class Room
}

VulnOverviewViewModel *-down- FetchVulnOverviewUseCase: -fetchVulnOverviewUseCase
VulnOverviewViewModel *-down- FavoriteVulnOverviewUseCase: -favoriteVulnOverviewUseCase
SearchViewModel *-down- SearchVulnOverviewUseCase: -searchVulnOverviewUseCase

FetchVulnOverviewUseCase o-down- JvnRepository: -jvnRepository
FavoriteVulnOverviewUseCase o-down- JvnRepository: -jvnRepository
SearchVulnOverviewUseCase o-down- SearchRepository: -searchRepository

JvnRepository <|.down. DefaultJvnRepository
SearchRepository <|.down. DefaultSearchRepository

DefaultJvnRepository o-- JvnDataSource: -jvnLocalDataSource, jvnRemoteDataSource
DefaultSearchRepository o-- JvnDataSource: -jvnRemoteDataSource

JvnLocalDataSource o-- JvnDatabase: -database
JvnRemoteDataSource o-- MyJvnApiService: -myJvnApiService

MyJvnApiService .down.> Retrofit
JvnDatabase .down.> Room

@enduml
